--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,28 @@
+:root {
+    --non_white: #F9F5F6;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+    background: linear-gradient(90deg, #545B77, #374259);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Screens */
+
+#phone {
+    background-color: var(--non_white);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1rem;
+    border: solid 5px black;
+    height: 45rem;
+    width: 25rem;
+}
 
 #phone_screen {
     background-image: url(/assets/background.jpg);
@@ -43,10 +67,7 @@
 #clock {
     font-size: 4rem;
     color: var(--non_white);
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    display: flex;
+    position: relative;
 }
 
 /* Bot-Half screen elements */
@@ -62,8 +83,6 @@
 
 /* Others */
 
-
-
 .app {
     background-position: center;
     background-size: contain;
@@ -75,10 +94,21 @@
     margin: .5rem;
 }
 
+#bot_button {
+    background-color: var(--non_white);
+    position: absolute;
+    display: flex;
+    border-radius: 1rem;
+    height: 1.7rem;
+    width: 1.7rem;
+    bottom: 0.1rem;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
     #phone {
         width: 100%;
+        max-width: 100%;
         margin: 20px;
     }
 }
