--- a/styles/wsp_trucho.css
+++ b/styles/wsp_trucho.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     background: linear-gradient(90deg, #545B77, #374259);
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -30,7 +30,8 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: 5rem auto;
     border: solid 5px black;
     border-radius: 1rem;
     height: 90%;
@@ -44,22 +45,52 @@ body {
     width: 100%;
 }
 
+/* Screen Elements */
+
+.profile_globe {
+    background-color: white;
+    background-image: url(/assets/profile-circle.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 10rem;
+    position: relative;
+    display: flex;
+    margin: 1.5rem 1.5rem 1rem 1rem;
+}
+
+.message_globe {
+    background-color: #B5F1CC;
+    position: relative;
+    opacity: 90%;
+    width: 15rem;
+    height: max-content;
+    padding: .5rem;
+    margin: 1.5rem 1.5rem 0rem 0rem;
+    border-radius: 1rem;
+}
+
 /* Others */
 
 #bot_button {
     background-color: var(--non_white);
     position: absolute;
     display: flex;
+    align-self: center;
     border-radius: 1rem;
     height: 1.7rem;
     width: 1.7rem;
     bottom: 0.1rem;
+    left: 47%;
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
     #phone {
         width: 100%;
+        max-width: 100%;
         margin: 20px;
     }
 }
