--- a/styles/wsp_trucho.css
+++ b/styles/wsp_trucho.css
@@ -1,5 +1,6 @@
 :root {
-    --non_white: #F9F5F6;
+    --non_white: #f1f6f9d8;
+    --green_pastel: #B5F1CC;
 }
 
 body {
@@ -24,14 +25,9 @@ body {
     width: 25rem;
 }
 
-#phone_screen {
-    background-image: url("/assets/wsp_trucho_background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    display: grid;
-    grid-template-columns: 5rem auto;
+#phone_screen_limits {
+    position: absolute;
+    display: flex;
     border: solid 5px black;
     border-radius: 1rem;
     height: 90%;
@@ -41,8 +37,51 @@ body {
 #phone_header {
     background-color: black;
     position: absolute;
+    display: flex;
     height: 1rem;
     width: 100%;
+    z-index: 1;
+}
+
+#phone_touch {
+    background-image: url("/assets/wsp_trucho_background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    display: grid;
+    grid-template-columns: 5rem auto;
+    border-radius: .6rem;
+    height: 100%;
+    width: 100%;
+}
+
+#message_input {
+    background-color: var(--non_white);
+    position: absolute;
+    display: flex;
+    height: 2rem;
+    width: 80%;
+    bottom: 0;
+    left: 0;
+    margin-left: .5rem;
+    margin-bottom: .5rem;
+}
+
+#send_message {
+    background-color: var(--non_white);
+    background-image: url(/assets/send-message.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    display: flex;
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 10rem;
+    right: 0;
+    bottom: 0;
+    margin: .5rem;
 }
 
 /* Screen Elements */
@@ -62,7 +101,7 @@ body {
 }
 
 .message_globe {
-    background-color: #B5F1CC;
+    background-color: var(--green_pastel);
     position: relative;
     opacity: 90%;
     width: 15rem;
