adding style for the popup window

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,130 +1,154 @@
 :root {
-    --non_white: #f1f6f9d8;
+  --non_white: #f1f6f9d8;
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
-    background: linear-gradient(90deg, #545B77, #374259);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-family: "Courier New", Courier, monospace;
+  background: linear-gradient(90deg, #545b77, #374259);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
-    height: 4rem;
-    width: 4rem;
+  height: 4rem;
+  width: 4rem;
 }
 
 /* Phone Screens */
 
 #phone {
-    background-color: var(--non_white);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1rem;
-    border: solid 5px black;
-    height: 45rem;
-    width: 25rem;
+  background-color: var(--non_white);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  border: solid 5px black;
+  height: 45rem;
+  width: 25rem;
 }
 
 #phone_screen_limits {
-    position: absolute;
-    display: flex;
-    border: solid 5px black;
-    border-radius: 1rem;
-    height: 90%;
-    width: 90%;
+  position: absolute;
+  display: flex;
+  border: solid 5px black;
+  border-radius: 1rem;
+  height: 90%;
+  width: 90%;
 }
 
 #phone_header {
-    background-color: black;
-    position: absolute;
-    display: flex;
-    height: 1rem;
-    width: 100%;
-    z-index: 1;
-    top: 0;
+  background-color: black;
+  position: absolute;
+  display: flex;
+  height: 1rem;
+  width: 100%;
+  z-index: 1;
+  top: 0;
 }
 
 #phone_touch {
-    background-image: url(/assets/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    display: flex;
-    height: 90%;
-    width: 90%;
-    border-radius: .6rem;
+  background-image: url(/assets/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  display: flex;
+  height: 90%;
+  width: 90%;
+  border-radius: 0.6rem;
 }
 
 #top_half_screen {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50%;
-    width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+  width: 100%;
 }
 
 #bot_half_screen {
-    position: absolute;
-    display: grid;
-    grid-template-rows: auto auto auto;
-    bottom: 0;
-    height: 50%;
-    width: 100%;
+  position: absolute;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  bottom: 0;
+  height: 50%;
+  width: 100%;
 }
 
 /* Top-Half screen elements */
 
 #clock {
-    font-size: 4rem;
-    color: var(--non_white);
-    position: relative;
+  font-size: 4rem;
+  color: var(--non_white);
+  position: relative;
 }
 
 /* Bot-Half screen elements */
 
 #wsp_trucho {
-    background-image: url("/assets/wsp_trucho.svg");
+  background-image: url("/assets/wsp_trucho.svg");
 }
 
 #nexus {
-    background-image: url("/assets/nexus.svg");
-    background-color: #b61644;
+  background-image: url("/assets/nexus.svg");
+  background-color: #b61644;
 }
 
 /* Others */
 
 .app {
-    background-position: center;
-    background-size: contain;
-    background-color: transparent;
-    position: relative;
-    border-radius: 10rem;
-    height: 4rem;
-    width: 4rem;
-    margin: .5rem;
+  background-position: center;
+  background-size: contain;
+  background-color: transparent;
+  position: relative;
+  border-radius: 10rem;
+  height: 4rem;
+  width: 4rem;
+  margin: 0.5rem;
 }
 
 #bot_button {
-    background-color: var(--non_white);
-    position: absolute;
-    display: flex;
-    border-radius: 1rem;
-    height: 1.7rem;
-    width: 1.7rem;
-    bottom: 0.1rem;
+  background-color: var(--non_white);
+  position: absolute;
+  display: flex;
+  border-radius: 1rem;
+  height: 1.7rem;
+  width: 1.7rem;
+  bottom: 0.1rem;
+}
+
+.popup {
+  position: fixed;
+  border-radius: 0.4 rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  animation: popupAnimation 6s ease-in-out;
+}
+
+.hidden {
+  display: none;
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
-    #phone {
-        width: 100%;
-        max-width: 100%;
-        margin: 20px;
-    }
+  #phone {
+    width: 100%;
+    max-width: 100%;
+    margin: 20px;
+  }
+}
+
+@keyframes popupAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
