--- a/styles/cptd_index.css
+++ b/styles/cptd_index.css
@@ -4,7 +4,9 @@
 
 body {
     font-family: 'Courier New', Courier, monospace;
-    background: linear-gradient(90deg, #545B77, #374259);
+
+    background: url("https://thumbs.gfycat.com/IncomparableGaseousDunlin-size_restricted.gif");
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
