--- a/styles/cptd_wsp.css
+++ b/styles/cptd_wsp.css
@@ -5,7 +5,8 @@
 
 body {
     font-family: 'Courier New', Courier, monospace;
-    background: linear-gradient(90deg, #545B77, #374259);
+    background: url("https://thumbs.gfycat.com/IncomparableGaseousDunlin-size_restricted.gif");
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,22 +103,22 @@ body {
 }
 
 .message {
-  margin-bottom: 6.5px;
-  padding: 2.5px;
-  border-radius: 5px;
+    margin-bottom: 6.5px;
+    padding: 2.5px;
+    border-radius: 5px;
 }
 
 .girl {
-  margin-right: auto;
-  width: fit-content;
-  background-color: #f0f0f0;
+    margin-right: auto;
+    width: fit-content;
+    background-color: #f0f0f0;
 }
 
 .you {
-  text-align: right;
-  width: fit-content;
-  margin-left: auto;
-  background-color:#bff9b3 ;
+    text-align: right;
+    width: fit-content;
+    margin-left: auto;
+    background-color: #bff9b3;
 }
 
 /* Media Queries */
