--- a/styles/wsp_trucho.css
+++ b/styles/wsp_trucho.css
@@ -5,7 +5,8 @@
 
 body {
   font-family: "Courier New", Courier, monospace;
-  background: linear-gradient(90deg, #545b77, #374259);
+  background: url("https://wallpapercave.com/wp/wp5084391.png");
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
