--- a/styles/cptd_index.css
+++ b/styles/cptd_index.css
@@ -1,213 +1,212 @@
 :root {
-    --non_white: #f1f6f9d8;
+  --non_white: #f1f6f9d8;
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 
-    background: url("https://thumbs.gfycat.com/IncomparableGaseousDunlin-size_restricted.gif");
-    background-size: contain;
-    background-repeat: repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: url("https://thumbs.gfycat.com/IncomparableGaseousDunlin-size_restricted.gif");
+  background-size: contain;
+  background-repeat: repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
-    height: 4rem;
-    width: 4rem;
+  height: 4rem;
+  width: 4rem;
 }
 
 /* Phone Screens */
 
 #phone {
-    background-color: var(--non_white);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1rem;
-    border: solid 5px black;
-    height: 45rem;
-    width: 25rem;
+  background-color: var(--non_white);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  border: solid 5px black;
+  height: 45rem;
+  width: 25rem;
 }
 
 #phone_screen_limits {
-    position: absolute;
-    display: flex;
-    border: solid 5px black;
-    border-radius: 1rem;
-    height: 90%;
-    width: 90%;
+  position: absolute;
+  display: flex;
+  border: solid 5px black;
+  border-radius: 1rem;
+  height: 90%;
+  width: 90%;
 }
 
 #phone_header {
-    background-color: black;
-    position: absolute;
-    display: flex;
-    height: 1rem;
-    width: 100%;
-    z-index: 1;
-    top: 0;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
+  background-color: black;
+  position: absolute;
+  display: flex;
+  height: 1rem;
+  width: 100%;
+  z-index: 1;
+  top: 0;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 
 #phone_touch {
-    background-image: url(/assets/cptd_background.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    display: flex;
-    height: 90%;
-    width: 90%;
-    border-radius: .6rem;
-
+  background-image: url(/assets/cptd_background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  display: flex;
+  height: 90%;
+  width: 90%;
+  border-radius: 0.6rem;
 }
 
 #top_half_screen {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50%;
-    width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+  width: 100%;
 }
 
 #bot_half_screen {
-    position: absolute;
-    display: grid;
-    grid-template-rows: auto auto auto;
-    bottom: 0;
-    height: 50%;
-    width: 100%;
+  position: absolute;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  bottom: 0;
+  height: 50%;
+  width: 100%;
 }
 
 /* Top-Half screen elements */
 
 #clock {
-    font-size: 4rem;
-    color: var(--non_white);
-    position: relative;
+  font-size: 4rem;
+  color: var(--non_white);
+  position: relative;
 }
 
 /* Bot-Half screen elements */
 
 #wsp_trucho {
-    background-image: url("/assets/wsp_trucho.svg");
+  background-image: url("/assets/wsp_trucho.svg");
 }
 
 #nexus {
-    background-image: url("/assets/nexus.svg");
-    background-color: #b61644;
+  background-image: url("/assets/nexus.svg");
+  background-color: #b61644;
 }
 
 /* Others */
 
 .app {
-    background-position: center;
-    background-size: contain;
-    background-color: transparent;
-    position: relative;
-    border-radius: 10rem;
-    height: 4rem;
-    width: 4rem;
-    margin: .5rem;
+  background-position: center;
+  background-size: contain;
+  background-color: transparent;
+  position: relative;
+  border-radius: 10rem;
+  height: 4rem;
+  width: 4rem;
+  margin: 0.5rem;
 }
 
 .popup {
-    display: none;
-    position: fixed;
-    width: 300px;
-    height: 200px;
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    padding: 20px;
-    font-family:Arial, Helvetica, sans-serif;
-  }
-  
-  .popup-content {
-    color: #272727;
-    text-align: center;
-  }
-  
-  .popup::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 10px;
-    z-index: -1;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #555;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  /* Estilo del botón */
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
-    font-size: 14px;
-    text-align: center;
-    text-decoration: none;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  .button:hover {
-    background-color: #45a049;
-  }
-  
-  .button:active {
-    background-color: #3d8b42;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Estilo del botón secundario */
-  .button.secondary {
-    background-color: #e0e0e0;
-    color: #333;
-  }
-  
-  .button.secondary:hover {
-    background-color: #d6d6d6;
-  }
-  
-  .button.secondary:active {
-    background-color: #c2c2c2;
-  }
+  display: none;
+  position: fixed;
+  width: 300px;
+  height: 200px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-#phone_touch>* {
-    filter: invert(100%);
+.popup-content {
+  color: #272727;
+  text-align: center;
+}
+
+.popup::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  z-index: -1;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #555;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Estilo del botón */
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+
+.button:active {
+  background-color: #3d8b42;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo del botón secundario */
+.button.secondary {
+  background-color: #e0e0e0;
+  color: #333;
+}
+
+.button.secondary:hover {
+  background-color: #d6d6d6;
+}
+
+.button.secondary:active {
+  background-color: #c2c2c2;
+}
+
+#phone_touch > * {
+  filter: invert(100%);
 }
 
 /* Media Queries */
 @media (max-width: 768px) {
-    #phone {
-        width: 100%;
-        max-width: 100%;
-        margin: 20px;
-    }
+  #phone {
+    width: 100%;
+    max-width: 100%;
+    margin: 20px;
+  }
 }
