--- a/styles/wsp_trucho.css
+++ b/styles/wsp_trucho.css
@@ -90,8 +90,8 @@ body {
   opacity: 90%;
   width: 15rem;
   height: max-content;
-  padding: .5rem;
-  margin: 1.5rem 1.5rem 1rem .5rem;
+  padding: 0.5rem;
+  margin: 1.5rem 1.5rem 1rem 0.5rem;
   border-radius: 1rem;
   text-align: center;
 }
@@ -109,7 +109,6 @@ body {
   bottom: 0.1rem;
   left: 47%;
 }
-
 
 /* Media Queries */
 @media (max-width: 768px) {
